
[tool.poetry]
name = "slacktube"
version = "0.1.0"
description = "Sync new Slack messages to YouTube playlists"
authors = ["Petteri Zitting <peteeez95@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/puttehi/slacktube"
repository = "https://github.com/puttehi/slacktube"
documentation = "https://slacktube.readthedocs.io"
keywords = ["slacktube"]
classifiers=[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    
    "License :: OSI Approved :: MIT License",
    
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/puttehi/slacktube/issues"

[tool.poetry.scripts]
slacktube = 'slacktube.cli:main'

[tool.poetry.dependencies]
python = "<3.11,>=3.10"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = ">=4.0.1,<5.0.0"
flakeheaven = "^3.2.1"
flake8-bandit = "3.0.0"
pre-commit = "^2.20.0"
invoke = "^1.7.3"
flake8-builtins = "^2.0.1"
flake8-blind-except = "^0.2.1"
flake8-logging-format = "^0.9.0"
flake8-bugbear = "^22.10.27"
flake8-annotations = "^2.9.1"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
isort = "^5.10.1"
black = "^22.10.0"
safety = "^2.3.2"
mypy = "^0.991"
Sphinx = "^5.3.0"
recommonmark = "^0.7.1"
bump2version = "^1.0.1"
pytest = "^7.2.0"
xdoctest = "^1.1.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
watchdog = {extras = ["watchmedo"], version = "^2.2.0"}

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["slacktube"]

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "if settings.DEBUG:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == __main__:"
]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.flakeheaven]
format = "grouped"
max_line_length = 99
show_source = true
docstring-convention = "google"
extended_default_ignore = []

[tool.flakeheaven.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
mccabe = ["+*"]
"flake8-*" = ["+*"]
darglint = ["+*"]

[tool.flakeheaven.exceptions."tests/"]
flake8-bandit = ["-S101"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
known_third_party = ["invoke", "nox"]

[tool.black]
line-length = 99
target-version = ["py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
